# shuffle-coding

./: Cargo.toml  LICENCE  README.md
.github/workflows/: rust.yml
multiset-data/: 10.txt  100.txt  1000.txt  10000.txt  100000.txt  probs.txt
src/: ans.rs  benchmark.rs  datasets.rs  graph.rs  graph_ans.rs  labelled_graph.rs  lib.rs  main.rs  multiset.rs  param_ans.rs  permutable.rs
src/autoregressive/: chunked.rs  graph.rs  mod.rs  multiset.rs  prefix_orbit.rs
src/bench/: datasets.rs  mod.rs  param_codec.rs
src/codec/: ans.rs  avl.rs  mod.rs
src/experimental/: graph.rs  mod.rs
src/experimental/autoregressive/: complete.rs  full.rs  joint.rs  mod.rs  product.rs
src/experimental/complete_joint/: aut.rs  graph.rs  interleaved.rs  mod.rs  sparse_perm.rs
src/joint/: coset.rs  incomplete.rs  mod.rs  multiset.rs
src/permutable/: graph.rs  mod.rs  multiset.rs
src/shuffle_ans/: coset_interleaved.rs  interleaved.rs  mod.rs
