[package]
name = "shuffle-coding"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/juliuskunze/shuffle-coding"
exclude = ["data/*", ".idea/*", ".DS_Store"]

[dependencies]
float_extras = "0.1.6"
ftree = "1.1.0"
fxhash = "0.2.1"
itertools = "0.13.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"

clap = { version = "4.5.20", features = ["derive"], optional = true }
downloader = { version = "0.2.8", optional = true }
nauty-Traces-sys = { version = "0.8.0", optional = true }
timeit = { version = "0.1.2", optional = true }
zip-extract = { version = "0.2.1", optional = true }

[dev-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
downloader = "0.2.8"
nauty-Traces-sys = "0.8.0"
timeit = "0.1.2"
zip-extract = "0.2.1"

[features]
experimental = ["nauty-Traces-sys"]
bench = ["experimental", "clap", "downloader", "timeit", "zip-extract"]

[[bin]]
name = "shuffle-coding"
required-features = ["bench"]
